--- a/CS_WEB/index_cn.html
+++ b/CS_WEB/index_cn.html
@@ -25,42 +25,32 @@
 			<div class="header_title">参与赛事</div>
 			<div class="header_more"><a href="?s=5&amp;c=2">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<table class="imagelist">
-			<tr>
-				<td>
-					<a href="#">
-						<div class="image_container">
-							<img src="images/5_2_1.png">
-							<div class="image_popup">ACM ICPC</div>
-						</div>
-					</a>
-				</td>
-				<td>
-					<a href="#">
-						<div class="image_container">
-							<img src="images/5_2_2.jpg">
-							<div class="image_popup">学术论坛</div>
-						</div>
-					</a>
-				</td>
-				<td>
-					<a href="#">
-						<div class="image_container">
-							<img src="images/5_2_3.jpg">
-							<div class="image_popup">辩论赛</div>
-						</div>
-					</a>
-				</td>
-				<td>
-					<a href="#">
-						<div class="image_container">
-							<img src="images/5_2_4.jpg">
-							<div class="image_popup">演讲比赛</div>
-						</div>
-					</a>
-				</td>
-			</tr>
-		</table>
+		<div class="imagelist">
+			<a href="#">
+				<div class="image_container">
+					<img src="images/5_2_1.png">
+					<div class="image_popup">ACM ICPC</div>
+				</div>
+			</a>
+			<a href="#">
+				<div class="image_container">
+					<img src="images/5_2_2.jpg">
+					<div class="image_popup">学术论坛</div>
+				</div>
+			</a>
+			<a href="#">
+				<div class="image_container">
+					<img src="images/5_2_3.jpg">
+					<div class="image_popup">辩论赛</div>
+				</div>
+			</a>
+			<a href="#">
+				<div class="image_container">
+					<img src="images/5_2_4.jpg">
+					<div class="image_popup">演讲比赛</div>
+				</div>
+			</a>
+		</div>
 	</div>
 	<div id="s4" class="column">
 		<div class="col_header">
@@ -105,64 +95,52 @@
 			<div class="header_title">实用工具</div>
 			<div class="header_more"><a href="?s=7">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<table class="gallery">
-			<tr>
-				<td>
-					<a href="?s=7&amp;c=1">
-						<div class="gallery_container">
-							<div class="gallery_image">
-								<img src="images/7_1.jpg">
-								<div class="gallery_padding"></div>
-							</div>
-							<span>常用软件</span>
-						</div>
-					</a>
-				</td>
-				<td>
-					<a href="?s=7&amp;c=2">
-						<div class="gallery_container">
-							<div class="gallery_image">
-								<img src="images/7_2.jpg">
-								<div class="gallery_padding"></div>
-							</div>
-							<span>开发工具</span>
-						</div>
-					</a>
-				</td>
-				<td>
-					<a href="?s=7&amp;c=3">
-						<div class="gallery_container">
-							<div class="gallery_image">
-								<img src="images/7_3.jpg">
-								<div class="gallery_padding"></div>
-							</div>
-							<span>信息网站</span>
-						</div>
-					</a>
-				</td>
-				<td>
-					<a href="?s=7&amp;c=4">
-						<div class="gallery_container">
-							<div class="gallery_image">
-								<img src="images/7_4.png">
-								<div class="gallery_padding"></div>
-							</div>
-							<span>自制游戏</span>
-						</div>
-					</a>
-				</td>
-				<td>
-					<a href="?s=7&amp;c=5">
-						<div class="gallery_container">
-							<div class="gallery_image">
-								<img src="images/7_5.jpg">
-								<div class="gallery_padding"></div>
-							</div>
-							<span>学期项目</span>
-						</div>
-					</a>
-				</td>
-			</tr>
-		</table>
+		<div class="gallery">
+			<a href="?s=7&amp;c=1">
+				<div class="gallery_container">
+					<div class="gallery_image">
+						<img src="images/7_1.jpg">
+						<div class="gallery_padding"></div>
+					</div>
+					<span>常用软件</span>
+				</div>
+			</a>
+			<a href="?s=7&amp;c=2">
+				<div class="gallery_container">
+					<div class="gallery_image">
+						<img src="images/7_2.jpg">
+						<div class="gallery_padding"></div>
+					</div>
+					<span>开发工具</span>
+				</div>
+			</a>
+			<a href="?s=7&amp;c=3">
+				<div class="gallery_container">
+					<div class="gallery_image">
+						<img src="images/7_3.jpg">
+						<div class="gallery_padding"></div>
+					</div>
+					<span>信息网站</span>
+				</div>
+			</a>
+			<a href="?s=7&amp;c=4">
+				<div class="gallery_container">
+					<div class="gallery_image">
+						<img src="images/7_4.png">
+						<div class="gallery_padding"></div>
+					</div>
+					<span>自制游戏</span>
+				</div>
+			</a>
+			<a href="?s=7&amp;c=5">
+				<div class="gallery_container">
+					<div class="gallery_image">
+						<img src="images/7_5.jpg">
+						<div class="gallery_padding"></div>
+					</div>
+					<span>学期项目</span>
+				</div>
+			</a>
+		</div>
 	</div>
 </div>
