Improve Page Button

--- a/CS_WEB/content.html
+++ b/CS_WEB/content.html
@@ -29,8 +29,12 @@
 	};
 
 	function renderPageButton(current_page, page_count, link_script) {
-		if(current_page != 1)
+		if(page_count < 2) return;
+		if(current_page == 1) {
+			$('#pager').append('<div class="pagebutton pagebutton_disabled">&lt;</div>');
+		} else {
 			$('#pager').append('<div class="pagebutton"><a href="' + link_script(current_page - 1) + '">&lt;</a></div>');
+		}
 		for(var i = 1; i <= page_count; i++) {
 			if(i == current_page) {
 				$('#pager').append('<div class="pagebutton nowpage"><a href="' + link_script(i) + '">' + i + '</a></div>');
@@ -38,7 +42,11 @@
 				$('#pager').append('<div class="pagebutton"><a href="' + link_script(i) + '">' + i + '</a></div>');
 			}
 		}
-		if(current_page != page_count) $('#pager').append('<div class="pagebutton"><a href="' + link_script(current_page + 1) + '">&gt;</a></div>');
+		if(current_page == page_count) {
+			$('#pager').append('<div class="pagebutton pagebutton_disabled">&gt;</div>');
+		} else {
+			$('#pager').append('<div class="pagebutton"><a href="' + link_script(current_page + 1) + '">&gt;</a></div>');
+		}
 	}
 
 	function countPage(length, num_per_page) {
