--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -9,7 +9,10 @@
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/jquery.cookie.js"></script>
 		<script>
-			function renderSlide(content_deferred, url) {
+			var animated_seq = new Array(7);
+			for(var i = 0; i < 7; i++) animated_seq[i] = new $.Deferred();
+
+			function renderSlide(header_animated, content_deferred, url) {
 				$.getJSON(url, function(data) {
 					content_deferred.done(function() {
 						for(var i = 0; i < data.length; i++) {
@@ -24,6 +27,12 @@
 								'</li>');
 						}
 						$('#slide').unslider({speed: 500, delay: 4000, keys: true, dots: true, fluid: false});
+						header_animated.done(function() {
+							$('#slide').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
+								animated_seq[0].resolve(1);
+							});
+							$('#slide').removeClass('hidden');
+						});
 					});
 				});
 			}
@@ -52,7 +61,16 @@
 				var lang = $.cookie('language');
 				if(!lang) lang = 'cn';
 				var map = $.getJSON('content_' + lang + '/map.json');
+				$('#header').load('header_' + lang + '.html', function() {
+					$('#header').removeClass('hidden');
+					header_animated.resolve();
+					map.done(function(data) {
+						renderMenu(data, section);
+					});
+				});
+				$('#footer').load('footer_' + lang + '.html');
 				var section = parseInt(getParameterByName('s'));
+				var header_animated = new $.Deferred();
 				if(isNaN(section)) {
 					section = 0;
 					var content_deferred = new $.Deferred();
@@ -67,11 +85,24 @@
 							$('.image_popup').css('bottom', '0');
 							$('.gallery_container span').css('display', 'inline');
 						}
+						for(var i = 0; i <= 6; i++) {
+							animated_seq[i].done(function(i) {
+								$('#column' + i + ' .col_header').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
+									if(i < 6) animated_seq[i].resolve(i + 1);
+									$('#column' + i + ' .header_title').removeClass('hidden');
+									$('#column' + i + ' .header_more').removeClass('hidden');
+									$('#column' + i + ' .itemlist').removeClass('hidden');
+									$('#column' + i + ' .imagelist').removeClass('hidden');
+									$('#column' + i + ' .gallery').removeClass('hidden');
+								});
+								$('#column' + i + ' .col_header').removeClass('hidden');
+							});
+						}
 					});
-					renderSlide(content_deferred, 'content_' + lang + '/slides.json');
-					renderColumn(content_deferred, '#s1c2', lang, 1, 2);
-					renderColumn(content_deferred, '#s1c3', lang, 1, 3);
-					renderColumn(content_deferred, '#s6c1', lang, 6, 1);
+					renderSlide(header_animated, content_deferred, 'content_' + lang + '/slides.json');
+					renderColumn(content_deferred, '#column1', lang, 1, 3);
+					renderColumn(content_deferred, '#column2', lang, 1, 2);
+					renderColumn(content_deferred, '#column5', lang, 6, 1);
 				} else {
 					var column = parseInt(getParameterByName('c'));
 					var article = parseInt(getParameterByName('a'));
@@ -81,17 +112,11 @@
 						});
 					});
 				}
-				$('#header').load('header_' + lang + '.html', function() {
-					map.done(function(data) {
-						renderMenu(data, section);
-					});
-				});
-				$('#footer').load('footer_' + lang + '.html');
 			});
 		</script>
 	</head>
 	<body>
-		<div id="header"></div>
+		<div id="header" class="hidden"></div>
 		<div id="content"></div>
 		<div id="footer"></div>
 	</body>
