--- a/CS_WEB/index_cn.html
+++ b/CS_WEB/index_cn.html
@@ -1,146 +1,149 @@
 <script src="js/modernizr.custom.88443.js"></script>
 <script src="js/unslider.min.js"></script>
-<div id="slide"><ul></ul></div>
+<div id="slide" class="hidden"><ul></ul></div>
 <div class="columns">
-	<div id="s1c3" class="column">
-		<div class="col_header">
-			<div class="header_title">集体活动</div>
-			<div class="header_more"><a href="?s=1&amp;c=3">MORE&nbsp;&raquo;</a></div>
+	<div id="column1" class="column">
+		<div class="col_header hidden">
+			<div class="header_title hidden">集体活动</div>
+			<div class="header_more hidden"><a href="?s=1&amp;c=3">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<table class="itemlist">
-		</table>
+		<div class="itemlist_container"><table class="itemlist hidden"></table></div>
 	</div>
-	<div id="s1c2" class="column">
-		<div class="col_header">
-			<div class="header_title">取向动态</div>
-			<div class="header_more"><a href="?s=1&amp;c=2">MORE&nbsp;&raquo;</a></div>
+	<div id="column2" class="column">
+		<div class="col_header hidden">
+			<div class="header_title hidden">取向动态</div>
+			<div class="header_more hidden"><a href="?s=1&amp;c=2">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<table class="itemlist">
-		</table>
+		<div class="itemlist_container"><table class="itemlist hidden"></table></div>
 	</div>
 </div>
 <div class="columns">
-	<div id="s5c2" class="column">
-		<div class="col_header">
-			<div class="header_title">参与赛事</div>
-			<div class="header_more"><a href="?s=5&amp;c=2">MORE&nbsp;&raquo;</a></div>
+	<div id="column3" class="column">
+		<div class="col_header hidden">
+			<div class="header_title hidden">参与赛事</div>
+			<div class="header_more hidden"><a href="?s=5&amp;c=2">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<div class="imagelist">
-			<a href="#">
-				<div class="image_container">
-					<img src="images/5_2_1.png">
-					<div class="image_popup">ACM ICPC</div>
-				</div>
-			</a>
-			<a href="#">
-				<div class="image_container">
-					<img src="images/5_2_2.jpg">
-					<div class="image_popup">学术论坛</div>
-				</div>
-			</a>
-			<a href="#">
-				<div class="image_container">
-					<img src="images/5_2_3.jpg">
-					<div class="image_popup">辩论赛</div>
-				</div>
-			</a>
-			<a href="#">
-				<div class="image_container">
-					<img src="images/5_2_4.jpg">
-					<div class="image_popup">演讲比赛</div>
-				</div>
-			</a>
+		<div class="imagelist_container">
+			<div class="imagelist hidden">
+				<a href="#">
+					<div class="image_container">
+						<img src="images/5_2_1.png">
+						<div class="image_popup">ACM ICPC</div>
+					</div>
+				</a>
+				<a href="#">
+					<div class="image_container">
+						<img src="images/5_2_2.jpg">
+						<div class="image_popup">学术论坛</div>
+					</div>
+				</a>
+				<a href="#">
+					<div class="image_container">
+						<img src="images/5_2_3.jpg">
+						<div class="image_popup">辩论赛</div>
+					</div>
+				</a>
+				<a href="#">
+					<div class="image_container">
+						<img src="images/5_2_4.jpg">
+						<div class="image_popup">演讲比赛</div>
+					</div>
+				</a>
+			</div>
 		</div>
 	</div>
-	<div id="s4" class="column">
-		<div class="col_header">
-			<div class="header_title">学习资源</div>
-			<div class="header_more"><a href="?s=4">MORE&nbsp;&raquo;</a></div>
+	<div id="column4" class="column">
+		<div class="col_header hidden">
+			<div class="header_title hidden">学习资源</div>
+			<div class="header_more hidden"><a href="?s=4">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<table class="itemlist">
-			<tr>
-				<td class="item_dot"></td>
-				<td class="item_title"><a href="http://www.course.sdu.edu.cn">山东大学课程中心</a></td>
-			</tr>
-			<tr>
-				<td class="item_dot"></td>
-				<td class="item_title"><a href="?s=4&amp;c=1">教学课件</a></td>
-			</tr>
-			<tr>
-				<td class="item_dot"></td>
-				<td class="item_title"><a href="?s=4&amp;c=2">历年考试真题</a></td>
-			</tr>
-			<tr>
-				<td class="item_dot"></td>
-				<td class="item_title"><a href="?s=4&amp;c=3">电子书籍</a></td>
-			</tr>
-			<tr>
-				<td class="item_dot"></td>
-				<td class="item_title"><a href="?s=4&amp;c=4">师长心得</a></td>
-			</tr>
-		</table>
+		<div class="itemlist_container">
+			<table class="itemlist hidden">
+				<tr>
+					<td class="item_dot"></td>
+					<td class="item_title"><a href="http://www.course.sdu.edu.cn">山东大学课程中心</a></td>
+				</tr>
+				<tr>
+					<td class="item_dot"></td>
+					<td class="item_title"><a href="?s=4&amp;c=1">教学课件</a></td>
+				</tr>
+				<tr>
+					<td class="item_dot"></td>
+					<td class="item_title"><a href="?s=4&amp;c=2">历年考试真题</a></td>
+				</tr>
+				<tr>
+					<td class="item_dot"></td>
+					<td class="item_title"><a href="?s=4&amp;c=3">电子书籍</a></td>
+				</tr>
+				<tr>
+					<td class="item_dot"></td>
+					<td class="item_title"><a href="?s=4&amp;c=4">师长心得</a></td>
+				</tr>
+			</table>
+		</div>
 	</div>
 </div>
 <div class="columns">
-	<div id="s6c1" class="column">
-		<div class="col_header">
-			<div class="header_title">招生动态</div>
-			<div class="header_more"><a href="?s=6">MORE&nbsp;&raquo;</a></div>
+	<div id="column5" class="column">
+		<div class="col_header hidden">
+			<div class="header_title hidden">招生动态</div>
+			<div class="header_more hidden"><a href="?s=6">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<table class="itemlist">
-		</table>
+		<div class="itemlist_container"><table class="itemlist hidden"></table></div>
 	</div>
-	<div id="s7" class="column">
-		<div class="col_header">
-			<div class="header_title">实用工具</div>
-			<div class="header_more"><a href="?s=7">MORE&nbsp;&raquo;</a></div>
+	<div id="column6" class="column">
+		<div class="col_header hidden">
+			<div class="header_title hidden">实用工具</div>
+			<div class="header_more hidden"><a href="?s=7">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<div class="gallery">
-			<a href="?s=7&amp;c=1">
-				<div class="gallery_container">
-					<div class="gallery_image">
-						<img src="images/7_1.jpg">
-						<div class="gallery_padding"></div>
+		<div class="gallerylist_container">
+			<div class="gallery hidden">
+				<a href="?s=7&amp;c=1">
+					<div class="gallery_container">
+						<div class="gallery_image">
+							<img src="images/7_1.jpg">
+							<div class="gallery_padding"></div>
+						</div>
+						<span>常用软件</span>
 					</div>
-					<span>常用软件</span>
-				</div>
-			</a>
-			<a href="?s=7&amp;c=2">
-				<div class="gallery_container">
-					<div class="gallery_image">
-						<img src="images/7_2.jpg">
-						<div class="gallery_padding"></div>
+				</a>
+				<a href="?s=7&amp;c=2">
+					<div class="gallery_container">
+						<div class="gallery_image">
+							<img src="images/7_2.jpg">
+							<div class="gallery_padding"></div>
+						</div>
+						<span>开发工具</span>
 					</div>
-					<span>开发工具</span>
-				</div>
-			</a>
-			<a href="?s=7&amp;c=3">
-				<div class="gallery_container">
-					<div class="gallery_image">
-						<img src="images/7_3.jpg">
-						<div class="gallery_padding"></div>
+				</a>
+				<a href="?s=7&amp;c=3">
+					<div class="gallery_container">
+						<div class="gallery_image">
+							<img src="images/7_3.jpg">
+							<div class="gallery_padding"></div>
+						</div>
+						<span>信息网站</span>
 					</div>
-					<span>信息网站</span>
-				</div>
-			</a>
-			<a href="?s=7&amp;c=4">
-				<div class="gallery_container">
-					<div class="gallery_image">
-						<img src="images/7_4.png">
-						<div class="gallery_padding"></div>
+				</a>
+				<a href="?s=7&amp;c=4">
+					<div class="gallery_container">
+						<div class="gallery_image">
+							<img src="images/7_4.png">
+							<div class="gallery_padding"></div>
+						</div>
+						<span>自制游戏</span>
 					</div>
-					<span>自制游戏</span>
-				</div>
-			</a>
-			<a href="?s=7&amp;c=5">
-				<div class="gallery_container">
-					<div class="gallery_image">
-						<img src="images/7_5.jpg">
-						<div class="gallery_padding"></div>
+				</a>
+				<a href="?s=7&amp;c=5">
+					<div class="gallery_container">
+						<div class="gallery_image">
+							<img src="images/7_5.jpg">
+							<div class="gallery_padding"></div>
+						</div>
+						<span>学期项目</span>
 					</div>
-					<span>学期项目</span>
-				</div>
-			</a>
+				</a>
+			</div>
 		</div>
 	</div>
 </div>
