--- a/CS_WEB/index_cn.html
+++ b/CS_WEB/index_cn.html
@@ -1,6 +1,6 @@
 <script src="js/modernizr.custom.88443.js"></script>
 <script src="js/unslider.min.js"></script>
-<div id="slide" class="hidden"><ul></ul></div>
+<div id="slide_container" class="hidden"><div id="slide"><ul></ul></div></div>
 <div class="columns">
 	<div id="column1" class="column">
 		<div class="col_header hidden">
