--- a/CS_WEB/index_en.html
+++ b/CS_WEB/index_en.html
@@ -1,146 +1,149 @@
 <script src="js/modernizr.custom.88443.js"></script>
 <script src="js/unslider.min.js"></script>
-<div id="slide"><ul></ul></div>
+<div id="slide_container" class="hidden"><div id="slide"><ul></ul></div></div>
 <div class="columns">
-	<div id="s1c3" class="column">
-		<div class="col_header">
-			<div class="header_title">Activities</div>
-			<div class="header_more"><a href="?s=1&amp;c=3">MORE&nbsp;&raquo;</a></div>
+	<div id="column1" class="column">
+		<div class="col_header hidden">
+			<div class="header_title hidden">Activities</div>
+			<div class="header_more hidden"><a href="?s=1&amp;c=3">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<table class="itemlist">
-		</table>
+		<div class="itemlist_container"><table class="itemlist hidden"></table></div>
 	</div>
-	<div id="s1c2" class="column">
-		<div class="col_header">
-			<div class="header_title">News</div>
-			<div class="header_more"><a href="?s=1&amp;c=2">MORE&nbsp;&raquo;</a></div>
+	<div id="column2" class="column">
+		<div class="col_header hidden">
+			<div class="header_title hidden">News</div>
+			<div class="header_more hidden"><a href="?s=1&amp;c=2">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<table class="itemlist">
-		</table>
+		<div class="itemlist_container"><table class="itemlist hidden"></table></div>
 	</div>
 </div>
 <div class="columns">
-	<div id="s5c2" class="column">
-		<div class="col_header">
-			<div class="header_title">Competitions</div>
-			<div class="header_more"><a href="?s=5&amp;c=2">MORE&nbsp;&raquo;</a></div>
+	<div id="column3" class="column">
+		<div class="col_header hidden">
+			<div class="header_title hidden">Competitions</div>
+			<div class="header_more hidden"><a href="?s=5&amp;c=2">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<div class="imagelist">
-			<a href="#">
-				<div class="image_container">
-					<img src="images/5_2_1.png">
-					<div class="image_popup">ACM ICPC</div>
-				</div>
-			</a>
-			<a href="#">
-				<div class="image_container">
-					<img src="images/5_2_2.jpg">
-					<div class="image_popup">Seminar</div>
-				</div>
-			</a>
-			<a href="#">
-				<div class="image_container">
-					<img src="images/5_2_3.jpg">
-					<div class="image_popup">Debate</div>
-				</div>
-			</a>
-			<a href="#">
-				<div class="image_container">
-					<img src="images/5_2_4.jpg">
-					<div class="image_popup">Speech</div>
-				</div>
-			</a>
+		<div class="imagelist_container">
+			<div class="imagelist hidden">
+				<a href="#">
+					<div class="image_container">
+						<img src="images/5_2_1.png">
+						<div class="image_popup">ACM ICPC</div>
+					</div>
+				</a>
+				<a href="#">
+					<div class="image_container">
+						<img src="images/5_2_2.jpg">
+						<div class="image_popup">Seminar</div>
+					</div>
+				</a>
+				<a href="#">
+					<div class="image_container">
+						<img src="images/5_2_3.jpg">
+						<div class="image_popup">Debate</div>
+					</div>
+				</a>
+				<a href="#">
+					<div class="image_container">
+						<img src="images/5_2_4.jpg">
+						<div class="image_popup">Speech</div>
+					</div>
+				</a>
+			</div>
 		</div>
 	</div>
-	<div id="s4" class="column">
-		<div class="col_header">
-			<div class="header_title">Resources</div>
-			<div class="header_more"><a href="?s=4">MORE&nbsp;&raquo;</a></div>
+	<div id="column4" class="column">
+		<div class="col_header hidden">
+			<div class="header_title hidden">Resources</div>
+			<div class="header_more hidden"><a href="?s=4">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<table class="itemlist">
-			<tr>
-				<td class="item_dot"></td>
-				<td class="item_title"><a href="http://www.course.sdu.edu.cn">Course Center</a></td>
-			</tr>
-			<tr>
-				<td class="item_dot"></td>
-				<td class="item_title"><a href="?s=4&amp;c=1">Courseware</a></td>
-			</tr>
-			<tr>
-				<td class="item_dot"></td>
-				<td class="item_title"><a href="?s=4&amp;c=2">Exams</a></td>
-			</tr>
-			<tr>
-				<td class="item_dot"></td>
-				<td class="item_title"><a href="?s=4&amp;c=3">E-books</a></td>
-			</tr>
-			<tr>
-				<td class="item_dot"></td>
-				<td class="item_title"><a href="?s=4&amp;c=4">Experience</a></td>
-			</tr>
-		</table>
+		<div class="itemlist_container">
+			<table class="itemlist hidden">
+				<tr>
+					<td class="item_dot"></td>
+					<td class="item_title"><a href="http://www.course.sdu.edu.cn">Course Center</a></td>
+				</tr>
+				<tr>
+					<td class="item_dot"></td>
+					<td class="item_title"><a href="?s=4&amp;c=1">Courseware</a></td>
+				</tr>
+				<tr>
+					<td class="item_dot"></td>
+					<td class="item_title"><a href="?s=4&amp;c=2">Exams</a></td>
+				</tr>
+				<tr>
+					<td class="item_dot"></td>
+					<td class="item_title"><a href="?s=4&amp;c=3">E-books</a></td>
+				</tr>
+				<tr>
+					<td class="item_dot"></td>
+					<td class="item_title"><a href="?s=4&amp;c=4">Experience</a></td>
+				</tr>
+			</table>
+		</div>
 	</div>
 </div>
 <div class="columns">
-	<div id="s6c1" class="column">
-		<div class="col_header">
-			<div class="header_title">Admission</div>
-			<div class="header_more"><a href="?s=6">MORE&nbsp;&raquo;</a></div>
+	<div id="column5" class="column">
+		<div class="col_header hidden">
+			<div class="header_title hidden">Admission</div>
+			<div class="header_more hidden"><a href="?s=6">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<table class="itemlist">
-		</table>
+		<div class="itemlist_container"><table class="itemlist hidden"></table></div>
 	</div>
-	<div id="s7" class="column">
-		<div class="col_header">
-			<div class="header_title">Utility</div>
-			<div class="header_more"><a href="?s=7">MORE&nbsp;&raquo;</a></div>
+	<div id="column6" class="column">
+		<div class="col_header hidden">
+			<div class="header_title hidden">Utility</div>
+			<div class="header_more hidden"><a href="?s=7">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<div class="gallery">
-			<a href="?s=7&amp;c=1">
-				<div class="gallery_container">
-					<div class="gallery_image">
-						<img src="images/7_1.jpg">
-						<div class="gallery_padding"></div>
+		<div class="gallerylist_container">
+			<div class="gallery hidden">
+				<a href="?s=7&amp;c=1">
+					<div class="gallery_container">
+						<div class="gallery_image">
+							<img src="images/7_1.jpg">
+							<div class="gallery_padding"></div>
+						</div>
+						<span>Software</span>
 					</div>
-					<span>Software</span>
-				</div>
-			</a>
-			<a href="?s=7&amp;c=2">
-				<div class="gallery_container">
-					<div class="gallery_image">
-						<img src="images/7_2.jpg">
-						<div class="gallery_padding"></div>
+				</a>
+				<a href="?s=7&amp;c=2">
+					<div class="gallery_container">
+						<div class="gallery_image">
+							<img src="images/7_2.jpg">
+							<div class="gallery_padding"></div>
+						</div>
+						<span>Tools</span>
 					</div>
-					<span>Tools</span>
-				</div>
-			</a>
-			<a href="?s=7&amp;c=3">
-				<div class="gallery_container">
-					<div class="gallery_image">
-						<img src="images/7_3.jpg">
-						<div class="gallery_padding"></div>
+				</a>
+				<a href="?s=7&amp;c=3">
+					<div class="gallery_container">
+						<div class="gallery_image">
+							<img src="images/7_3.jpg">
+							<div class="gallery_padding"></div>
+						</div>
+						<span>Websites</span>
 					</div>
-					<span>Websites</span>
-				</div>
-			</a>
-			<a href="?s=7&amp;c=4">
-				<div class="gallery_container">
-					<div class="gallery_image">
-						<img src="images/7_4.png">
-						<div class="gallery_padding"></div>
+				</a>
+				<a href="?s=7&amp;c=4">
+					<div class="gallery_container">
+						<div class="gallery_image">
+							<img src="images/7_4.png">
+							<div class="gallery_padding"></div>
+						</div>
+						<span>Games</span>
 					</div>
-					<span>Games</span>
-				</div>
-			</a>
-			<a href="?s=7&amp;c=5">
-				<div class="gallery_container">
-					<div class="gallery_image">
-						<img src="images/7_5.jpg">
-						<div class="gallery_padding"></div>
+				</a>
+				<a href="?s=7&amp;c=5">
+					<div class="gallery_container">
+						<div class="gallery_image">
+							<img src="images/7_5.jpg">
+							<div class="gallery_padding"></div>
+						</div>
+						<span>Projects</span>
 					</div>
-					<span>Projects</span>
-				</div>
-			</a>
+				</a>
+			</div>
 		</div>
 	</div>
 </div>
