--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -9,10 +9,7 @@
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/jquery.cookie.js"></script>
 		<script>
-			var animated_seq = new Array(7);
-			for(var i = 0; i < 7; i++) animated_seq[i] = new $.Deferred();
-
-			function renderSlide(header_animated, content_deferred, url) {
+			function renderSlide(animated_seq, content_deferred, url) {
 				$.getJSON(url, function(data) {
 					content_deferred.done(function() {
 						for(var i = 0; i < data.length; i++) {
@@ -27,9 +24,9 @@
 								'</li>');
 						}
 						$('#slide').unslider({speed: 500, delay: 4000, keys: true, dots: true, fluid: false});
-						header_animated.done(function() {
+						animated_seq[0].done(function() {
 							$('#slide_container').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
-								animated_seq[0].resolve(1);
+								animated_seq[1].resolve(1);
 							});
 							$('#slide_container').removeClass('hidden');
 						});
@@ -60,18 +57,19 @@
 			$(document).ready(function() {
 				var lang = $.cookie('language');
 				if(!lang) lang = 'cn';
+				var animated_seq = new Array(9);
+				for(var i = 0; i < 9; i++) animated_seq[i] = new $.Deferred();
 				var map = $.getJSON('content_' + lang + '/map.json');
 				$('#header').load('header_' + lang + '.html', function() {
 					$('#header').removeClass('hidden');
 					$('#footer').show();
-					header_animated.resolve();
+					animated_seq[0].resolve();
 					map.done(function(data) {
 						renderMenu(data, section);
 					});
 				});
 				$('#footer').load('footer_' + lang + '.html');
 				var section = parseInt(getParameterByName('s'));
-				var header_animated = new $.Deferred();
 				if(isNaN(section)) {
 					section = 0;
 					var content_deferred = new $.Deferred();
@@ -89,22 +87,18 @@
 						if(!Modernizr.csstransitions) {
 							$('.hidden').removeClass('hidden');
 						} else {
-							for(var i = 0; i <= 6; i++) {
-								animated_seq[i].done(function(i) {
-									$('#column' + i + ' .col_header').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
-										if(i < 6) animated_seq[i].resolve(i + 1);
-										$('#column' + i + ' .header_title').removeClass('hidden');
-										$('#column' + i + ' .header_more').removeClass('hidden');
-										$('#column' + i + ' .itemlist').removeClass('hidden');
-										$('#column' + i + ' .imagelist').removeClass('hidden');
-										$('#column' + i + ' .gallery').removeClass('hidden');
+							for(var i = 1; i < 8; i++) {
+								animated_seq[i].done(function(seq) {
+									$('#column' + seq + ' .col_header').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
+										animated_seq[seq + 1].resolve(seq + 1);
+										$('#column' + seq + ' .hidden').removeClass('hidden');
 									});
-									$('#column' + i + ' .col_header').removeClass('hidden');
+									$('#column' + seq + ' .col_header').removeClass('hidden');
 								});
 							}
 						}
 					});
-					renderSlide(header_animated, content_deferred, 'content_' + lang + '/slides.json');
+					renderSlide(animated_seq, content_deferred, 'content_' + lang + '/slides.json');
 					renderColumn(content_deferred, '#column1', lang, 1, 3);
 					renderColumn(content_deferred, '#column2', lang, 1, 2);
 					renderColumn(content_deferred, '#column5', lang, 6, 1);
