--- a/CS_WEB/content.html
+++ b/CS_WEB/content.html
@@ -1,20 +1,21 @@
-<div id="sidebar_container">
+<div id="sidebar_container" class="hidden">
 	<div id="sidebar" class="floatable">
 		<div id="sidebar_header"></div>
-		<div id="sidebar_navi"><ul></ul></div>
+		<div id="sidebar_navi"></div>
 	</div>
 </div>
 <div id="article_container">
-	<div id="location">
-		<div id="loc_prompt"></div>
-		<div id="loc_entry_1"></div>
-		<div id="loc_sep_1"></div>
-		<div id="loc_entry_2"></div>
-		<div id="loc_sep_2"></div>
-		<div id="loc_entry_3"></div>
+	<div id="location_container" class="hidden">
+		<div id="location">
+			<div id="loc_prompt"></div>
+			<div id="loc_entry_1"></div>
+			<div id="loc_sep_1"></div>
+			<div id="loc_entry_2"></div>
+			<div id="loc_sep_2"></div>
+			<div id="loc_entry_3"></div>
+		</div>
 	</div>
-	<div id="placeholder">
-	</div>
+	<div id="placeholder" class="hidden"></div>
 </div>
 <script>
 	var page_404 = '<p style="text-align:center;text-indent:0"><img style="display:inline" src="images/404.jpg"></p>';
@@ -56,6 +57,7 @@
 	function renderGrid(tag, lang, section, column, page) {
 		$.getJSON('content_' + lang + '/' + section + '/' + column + '/0.json', function(data) {
 			var page_count = countPage(data.length, 3 * 4);
+			if(isNaN(page) || page < 1 || page > page_count) page = 1;
 			$(tag).html(
 				'<div class="gridcont"></div>' +
 				'<div id="pager_container"><div id="pager"></div></div>');
@@ -93,6 +95,7 @@
 	function renderList(tag, lang, section, column, page) {
 		$.getJSON('content_' + lang + '/' + section + '/' + column + '/0.json', function(data) {
 			var page_count = countPage(data.length, 15);
+			if(isNaN(page) || page < 1 || page > page_count) page = 1;
 			$(tag).html('<table id="newslist"></table><div id="pager_container"><div id="pager"></div></div>');
 			var start = (page - 1) * 15, end = page * 15;
 			if(end > data.length) end = data.length;
@@ -113,7 +116,7 @@
 		});
 	}
 
-	function renderContent(data, section, column, article, lang) {
+	function renderContent(data, sequence, section, column, page, article, lang, animating, animation, norefresh) {
 		var site_title = data[0].title;
 		$('#loc_prompt').text(data[0].loc_prompt);
 		if (section < 1 || section >= data.length) {
@@ -127,6 +130,7 @@
 			if(isNaN(column) || column < 1 || column >= data.length) column = 1;
 			document.title = data[column].name + ' - ' + site_title;
 			$('#sidebar_header').text(data[0].page_name);
+			$('#sidebar_navi').html('<ul></ul>');
 			for(var s = 1; s < data.length; s++) {
 				if(s == column) {
 					$('#sidebar_navi ul').append('<li><a href="?s=' + section + '&amp;c=' + s + '"><strong>' + data[s].name + '</strong></a></li>');
@@ -146,10 +150,10 @@
 					});
 					break;
 				case 1:
-					renderList('#placeholder', lang, section, column, 1);
+					renderList('#placeholder', lang, section, column, page);
 					break;
 				case 2:
-					renderGrid('#placeholder', lang, section, column, 1);
+					renderGrid('#placeholder', lang, section, column, page);
 					break;
 				default:
 					$('#placeholder').html(page_404);
@@ -174,6 +178,28 @@
 					$('#placeholder').html(page_404);
 				});
 			}
+		}
+		if(animating) {
+			for(var i = 1; i < 8; i++) sequence[i] = new $.Deferred();
+			sequence[0].done(function() {
+				$('#location_container').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
+					$('#location_container').unbind();
+					sequence[1].resolve();
+				});
+				$('#location_container').removeClass('hidden');
+			});
+			sequence[1].done(function() {
+				$('#sidebar_container').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
+					$('#sidebar_container').unbind();
+					sequence[2].resolve();
+				});
+				$('#sidebar_container').removeClass('hidden');
+			});
+			sequence[2].done(function() {
+				$('#placeholder').removeClass('hidden');
+			});
+		} else {
+			$('.hidden').removeClass('hidden');
 		}
 	}
 </script>
