--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -8,8 +8,20 @@
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/jquery.cookie.js"></script>
+		<script src="js/jquery.event.move.js"></script>
+		<script src="js/jquery.event.swipe.js"></script>
+		<script src="js/modernizr.custom.46886.js"></script>
 		<script>
-			function renderSlide(animated_seq, content_deferred, url) {
+			var section, column, page, article;
+
+			function getParameterByName(name) {
+				name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+				var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
+					results = regex.exec(location.search);
+				return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+			}
+
+			function renderSlide(header_deferred, sequence, content_deferred, url, animating) {
 				$.getJSON(url, function(data) {
 					content_deferred.done(function() {
 						for(var i = 0; i < data.length; i++) {
@@ -24,18 +36,21 @@
 								'</li>');
 						}
 						$('#slide').unslider({speed: 500, delay: 4000, keys: true, dots: true, fluid: false});
-						animated_seq[0].done(function() {
-							$('#slide_container').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
-								animated_seq[1].resolve(1);
+						if(animating) {
+							header_deferred.done(function() {
+								$('#slide_container').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
+									$('#slide_container').unbind();
+									sequence[1].resolve(1);
+								});
+								$('#slide_container').removeClass('hidden');
 							});
-							$('#slide_container').removeClass('hidden');
-						});
+						}
 					});
 				});
 			}
 
 			function renderColumn(content_deferred, node, lang, section, column) {
-				$.getJSON('content_' + lang + '/' + section + '/' + column + '/0.json', function(data) {
+				return $.getJSON('content_' + lang + '/' + section + '/' + column + '/0.json', function(data) {
 					content_deferred.done(function() {
 						for(var i = 0; i < (data.length > 5 ? 5 : data.length); i++) {
 							$(node + ' .itemlist').append('<tr><td class="item_dot"></td><td class="item_title"><a href="' +
@@ -47,70 +62,126 @@
 				});
 			}
 
-			function getParameterByName(name) {
-				name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
-				var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
-					results = regex.exec(location.search);
-				return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+			function loadContent(map, section, lang, sequence, animating, animation, norefresh) {
+				column = parseInt(getParameterByName('c'));
+				page = parseInt(getParameterByName('p'));
+				article = parseInt(getParameterByName('a'));
+				$('#content').load('content.html', function() {
+					map.done(function(data) {
+						renderContent(data, sequence, section, column, page, article, lang, animating, animation, norefresh)
+					});
+				});
+			}
+
+			function loadIndex(map, lang, header_deferred, sequence, animating, animation, norefresh) {
+				map.done(function(data) {
+					document.title = data[0].title;
+				});
+				for(var i = 1; i < 8; i++) sequence[i] = new $.Deferred();
+				var content_deferred = new $.Deferred();
+				$('#content').load('index_' + lang + '.html', function() {
+					content_deferred.resolve();
+					Modernizr.load({
+						test: Modernizr.csstransitions,
+						yep : 'css/index-transition.css',
+						nope: 'js/index-transition.js'
+					});
+					if (Modernizr.touch) {
+						$('.image_popup').css('bottom', '0');
+						$('.gallery_container span').css('display', 'inline');
+					}
+					if(animating) {
+						for(var i = 1; i <= 6; i++) {
+							sequence[i].done(function(seq) {
+								$('#column' + seq + ' .col_header').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
+									$('#column' + seq + ' .col_header').unbind();
+									sequence[seq + 1].resolve(seq + 1);
+									$('#column' + seq + ' .hidden').removeClass('hidden');
+								});
+								$('#column' + seq + ' .col_header').removeClass('hidden');
+							});
+						}
+					} else {
+						$('.hidden').removeClass('hidden');
+					}
+				});
+				renderSlide(header_deferred, sequence, content_deferred, 'content_' + lang + '/slides.json', animating);
+				$.when(renderColumn(content_deferred, '#column1', lang, 1, 3),
+					renderColumn(content_deferred, '#column2', lang, 1, 2),
+					renderColumn(content_deferred, '#column5', lang, 6, 1)).then(function() {
+						if(norefresh) {
+							$('#content a').click(function() {
+								if($(this).attr('href').charAt(0) != '?') return;
+								history.pushState({}, '', this.href);
+								section = parseInt(getParameterByName('s'));
+								map.done(function(data) {
+									renderMenu(data, section);
+								});
+								if(animation) {
+									$('#slide_container').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
+										$('#slide_container').unbind();
+										loadContent(map, section, lang, sequence, animation, animation, norefresh);
+									});
+									$('.hideable').addClass('hidden');
+								} else {
+									loadContent(map, section, lang, sequence, animation, animation, norefresh);
+								}
+								return false;
+							});
+						}
+					});
+			}
+
+			function loadPage(map, lang, header_deferred, sequence, animating, animation, norefresh) {
+				section = parseInt(getParameterByName('s'));
+				if(isNaN(section)) {
+					section = 0;
+					loadIndex(map, lang, header_deferred, sequence, animating, animation, norefresh);
+				} else {
+					loadContent(map, section, lang, sequence, animating, animation, norefresh);
+				}
 			}
 
 			$(document).ready(function() {
 				var lang = $.cookie('language');
 				if(!lang) lang = 'cn';
-				var animated_seq = new Array(9);
-				for(var i = 0; i < 9; i++) animated_seq[i] = new $.Deferred();
+				var animation = Modernizr.csstransitions;
+				var norefresh = Modernizr.history;
+				var sequence = new Array(8);
+				sequence[0] = new $.Deferred();
+				var header_deferred = new $.Deferred();
 				var map = $.getJSON('content_' + lang + '/map.json');
+				if(norefresh) {
+					header_deferred.done(function() {
+						$(window).bind('popstate', function() {
+							loadPage(map, lang, header_deferred, sequence, false, animation, norefresh);
+							map.done(function(data) {
+								renderMenu(data, section);
+							});
+						});
+					});
+				}
+				loadPage(map, lang, header_deferred, sequence, animation, animation, norefresh);
 				$('#header').load('header_' + lang + '.html', function() {
-					$('#header').removeClass('hidden');
-					$('#footer').show();
-					animated_seq[0].resolve();
+					header_deferred.resolve();
+					if(animation) {
+						$('#header').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
+							$('#header').unbind();
+							sequence[0].resolve();
+						});
+						$('#header').removeClass('hidden');
+					}
 					map.done(function(data) {
 						renderMenu(data, section);
 					});
 				});
-				$('#footer').load('footer_' + lang + '.html');
-				var section = parseInt(getParameterByName('s'));
-				if(isNaN(section)) {
-					section = 0;
-					var content_deferred = new $.Deferred();
-					$('#content').load('index_' + lang + '.html', function() {
-						content_deferred.resolve();
-						Modernizr.load({
-							test: Modernizr.csstransitions,
-							yep : 'css/index-transition.css',
-							nope: 'js/index-transition.js'
+				$('#footer').load('footer_' + lang + '.html', function() {
+					if(animation) {
+						header_deferred.done(function() {
+							$('#footer').removeClass('hidden');
 						});
-						if (Modernizr.touch) {
-							$('.image_popup').css('bottom', '0');
-							$('.gallery_container span').css('display', 'inline');
-						}
-						if(!Modernizr.csstransitions) {
-							$('.hidden').removeClass('hidden');
-						} else {
-							for(var i = 1; i < 8; i++) {
-								animated_seq[i].done(function(seq) {
-									$('#column' + seq + ' .col_header').bind('transitionend webkitTransitionEnd oTransitionEnd MSTransitionEnd', function() {
-										animated_seq[seq + 1].resolve(seq + 1);
-										$('#column' + seq + ' .hidden').removeClass('hidden');
-									});
-									$('#column' + seq + ' .col_header').removeClass('hidden');
-								});
-							}
-						}
-					});
-					renderSlide(animated_seq, content_deferred, 'content_' + lang + '/slides.json');
-					renderColumn(content_deferred, '#column1', lang, 1, 3);
-					renderColumn(content_deferred, '#column2', lang, 1, 2);
-					renderColumn(content_deferred, '#column5', lang, 6, 1);
-				} else {
-					var column = parseInt(getParameterByName('c'));
-					var article = parseInt(getParameterByName('a'));
-					$('#content').load('content.html', function() {
-						map.done(function(data) {
-							renderContent(data, section, column, article, lang)
-						});
-					});
-				}
+					}
+				});
 			});
 
 			$(window).scroll(function(e) {
@@ -126,6 +197,6 @@
 	<body>
 		<div id="header" class="hidden"></div>
 		<div id="content"></div>
-		<div id="footer"></div>
+		<div id="footer" class="hidden"></div>
 	</body>
 </html>
