--- a/CS_WEB/index_cn.html
+++ b/CS_WEB/index_cn.html
@@ -1,30 +1,29 @@
-<script src="js/modernizr.custom.88443.js"></script>
 <script src="js/unslider.min.js"></script>
-<div id="slide_container" class="hidden"><div id="slide"><ul></ul></div></div>
+<div id="slide_container" class="hideable hidden"><div id="slide"><ul></ul></div></div>
 <div class="columns">
 	<div id="column1" class="column">
-		<div class="col_header hidden">
-			<div class="header_title hidden">集体活动</div>
-			<div class="header_more hidden"><a href="?s=1&amp;c=3">MORE&nbsp;&raquo;</a></div>
+		<div class="col_header hideable hidden">
+			<div class="header_title hideable hidden">集体活动</div>
+			<div class="header_more hideable hidden"><a href="?s=1&amp;c=3">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<div class="itemlist_container"><table class="itemlist hidden"></table></div>
+		<div class="itemlist_container"><table class="itemlist hideable hidden"></table></div>
 	</div>
 	<div id="column2" class="column">
-		<div class="col_header hidden">
-			<div class="header_title hidden">取向动态</div>
-			<div class="header_more hidden"><a href="?s=1&amp;c=2">MORE&nbsp;&raquo;</a></div>
+		<div class="col_header hideable hidden">
+			<div class="header_title hideable hidden">取向动态</div>
+			<div class="header_more hideable hidden"><a href="?s=1&amp;c=2">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<div class="itemlist_container"><table class="itemlist hidden"></table></div>
+		<div class="itemlist_container"><table class="itemlist hideable hidden"></table></div>
 	</div>
 </div>
 <div class="columns">
 	<div id="column3" class="column">
-		<div class="col_header hidden">
-			<div class="header_title hidden">参与赛事</div>
-			<div class="header_more hidden"><a href="?s=5&amp;c=2">MORE&nbsp;&raquo;</a></div>
+		<div class="col_header hideable hidden">
+			<div class="header_title hideable hidden">参与赛事</div>
+			<div class="header_more hideable hidden"><a href="?s=5&amp;c=2">MORE&nbsp;&raquo;</a></div>
 		</div>
 		<div class="imagelist_container">
-			<div class="imagelist hidden">
+			<div class="imagelist hideable hidden">
 				<a href="#">
 					<div class="image_container">
 						<img src="images/5_2_1.png">
@@ -53,12 +52,12 @@
 		</div>
 	</div>
 	<div id="column4" class="column">
-		<div class="col_header hidden">
-			<div class="header_title hidden">学习资源</div>
-			<div class="header_more hidden"><a href="?s=4">MORE&nbsp;&raquo;</a></div>
+		<div class="col_header hideable hidden">
+			<div class="header_title hideable hidden">学习资源</div>
+			<div class="header_more hideable hidden"><a href="?s=4">MORE&nbsp;&raquo;</a></div>
 		</div>
 		<div class="itemlist_container">
-			<table class="itemlist hidden">
+			<table class="itemlist hideable hidden">
 				<tr>
 					<td class="item_dot"></td>
 					<td class="item_title"><a href="http://www.course.sdu.edu.cn">山东大学课程中心</a></td>
@@ -85,19 +84,19 @@
 </div>
 <div class="columns">
 	<div id="column5" class="column">
-		<div class="col_header hidden">
-			<div class="header_title hidden">招生动态</div>
-			<div class="header_more hidden"><a href="?s=6">MORE&nbsp;&raquo;</a></div>
+		<div class="col_header hideable hidden">
+			<div class="header_title hideable hidden">招生动态</div>
+			<div class="header_more hideable hidden"><a href="?s=6">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<div class="itemlist_container"><table class="itemlist hidden"></table></div>
+		<div class="itemlist_container"><table class="itemlist hideable hidden"></table></div>
 	</div>
 	<div id="column6" class="column">
-		<div class="col_header hidden">
-			<div class="header_title hidden">实用工具</div>
-			<div class="header_more hidden"><a href="?s=7">MORE&nbsp;&raquo;</a></div>
+		<div class="col_header hideable hidden">
+			<div class="header_title hideable hidden">实用工具</div>
+			<div class="header_more hideable hidden"><a href="?s=7">MORE&nbsp;&raquo;</a></div>
 		</div>
 		<div class="gallerylist_container">
-			<div class="gallery hidden">
+			<div class="gallery hideable hidden">
 				<a href="?s=7&amp;c=1">
 					<div class="gallery_container">
 						<div class="gallery_image">
