--- a/CS_WEB/index_cn.html
+++ b/CS_WEB/index_cn.html
@@ -1,3 +1,5 @@
+<script src="js/jquery.event.move.js"></script>
+<script src="js/jquery.event.swipe.js"></script>
 <script src="js/unslider.min.js"></script>
 <div id="slide_container" class="hideable hidden"><div id="slide"><ul></ul></div></div>
 <div class="columns">
