--- a/CS_WEB/footer_cn.html
+++ b/CS_WEB/footer_cn.html
@@ -11,8 +11,8 @@
 			<li><a href="http://www.sdu.edu.cn">山东大学官方网站</a></li>
 			<li><a href="http://www.tsxt.sdu.edu.cn">泰山学堂主页</a></li>
 			<li><a href="http://www.cs.sdu.edu.cn">计算机学院主页</a></li>
-			<li><a href="#top">返回页首</a></li>
-			<li><a href="#">下载手机客户端</a></li>
+			<li><a href="javascript:backToTop()">返回页首</a></li>
+			<li><a>下载手机客户端</a></li>
 		</ul>
 	</div>
 	<div id="bottom-logo"></div>
