--- a/CS_WEB/footer_en.html
+++ b/CS_WEB/footer_en.html
@@ -11,8 +11,8 @@
 			<li><a href="http://www.sdu.edu.cn">Shandong University</a></li>
 			<li><a href="http://www.tsxt.sdu.edu.cn">Taishan College</a></li>
 			<li><a href="http://www.cs.sdu.edu.cn">School of CS</a></li>
-			<li><a href="#top">Back to Top</a></li>
-			<li><a href="#">Mobile Client</a></li>
+			<li><a href="javascript:backToTop()">Back to Top</a></li>
+			<li><a>Mobile Client</a></li>
 		</ul>
 	</div>
 	<div id="bottom-logo"></div>
